# gtmp3

./: .cache  .gitignore  LICENSE  cli.py  core.py  pyproject.toml  readme.md  requirements.txt
artifact/: core.py  downloader.py  main.py  teste.py
core/: core.py  dialogs.py  downloader.py  main.py
nsis/: installer.nsi
test/: test_core.py  test_view.py
